--- a/Surge.conf
+++ b/Surge.conf
@@ -30,13 +30,13 @@ replica = false
 use-keyword-filter = false
 
 [Proxy]
-🇺🇸 US = custom,172.24.33.11,1755,chacha20,>C.c>Ms(fzQ(&,https://DIVENG.io/down/SSE.module
+🇺🇸 US = custom,us.com,1234,rc4-md5,password,http://omgib13x8.bkt.clouddn.com/SSEncrypt.module
 
-🇭🇰 HK = custom,172.24.33.11,1755,chacha20,>C.c>Ms(fzQ(&,https://DIVENG.io/down/SSE.module
+🇭🇰 HK = custom,hk.com,1234,rc4-md5,password,http://omgib13x8.bkt.clouddn.com/SSEncrypt.module
 
-🇯🇵 JP = custom,172.24.33.11,1755,chacha20,>C.c>Ms(fzQ(&,https://DIVENG.io/down/SSE.module
+🇯🇵 JP = custom,jp.com,1234,rc4-md5,password,http://omgib13x8.bkt.clouddn.com/SSEncrypt.module
 
-🇸🇬 SG = custom,172.24.33.11,1755,chacha20,>C.c>Ms(fzQ(&,https://DIVENG.io/down/SSE.module
+🇸🇬 SG = custom,sg.com,1234,rc4-md5,password,http://omgib13x8.bkt.clouddn.com/SSEncrypt.module
 
 
 [Proxy Group]
